v X.XX
~~~~~~~~~~~~~~~~
New: Exercise PEE.T21, eigenvalue proof two ways
New: Exercise VS.T31, alternate proof of Theorem AISM
Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
Edit: Theorem EDYES, substantially shorten proof
Edit: Exercise IVLT.T15, streamline solution
Edit: Clarify Example NSE (Katrina Hoefflinger)
Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
Edit: Fine-tune induction proof of Theorem EOMP
Edit: Expanded Example MWIAA
Edit: Solution MR.T80, added one step to proof (Zach Jarvis)
Edit: Definition SUV, harmonize with Definition IM (Nathan Schultz)
Edit: Example SCAD, take more care with "span" (Robert Dwyer)
Edit: Structure five solutions as "iff" proofs (Mira Schoeberlein)
Edit: Simplify Solution ILT.T10
Edit: Definition CM, improve matrix display (Carissa Riedesel)
Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
Edit: Expand Solution IVLT.T40
Change: Streamline second half of the proof of Theorem BS
Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
Change: Theorems SSNS, BNS need case when n = r (Ken Price)
Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)
Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)
Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)
Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
Change: Streamline the proof of Theorem NPNF
Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
Typo: Theorem SMEZV, formatting error, second equation in Case 2 of proof (Matt Fergoda)
Typo: Exercises VS, group three cancellation exercises properly (Rachel Chaiser)
Typo: Solution EE.C19, correct two subscripts at the end (Matt Fergoda)
Typo: Theorem EIM, last line of proof need a zero vector (Matt Fergoda)