@@ -604,6 +604,23 @@
             </proof>
         </theorem>
         <p>So the span of a set of vectors, and the null space, column space, row space and left null space of a matrix are all subspaces, and hence are all vector spaces, meaning they have all the properties detailed in <xref ref="definition-VS" acro="VS"/> and in the basic theorems presented in <xref ref="section-VS" acro="VS"/>.  We have worked with these objects as just sets in <xref ref="chapter-V" acro="V"/> and <xref ref="chapter-M" acro="M"/>, but now we understand that they have much more structure.  In particular, being closed under vector addition and scalar multiplication means a subspace is also closed under linear combinations.</p>
+        <p>We can combine two arbitrary subspaces, in two different ways, to make new subspaces.  We first look at the intersection (<xref ref="definition-SI"/>) of two subspaces.</p>
+        <theorem xml:id="theorem-SIIS" acro="SIIS">
+            <title>Subspace Intersection is a Subspace</title>
+            <idx>
+                <h>subspace</h>
+                <h>intersection</h>
+            </idx>
+            <statement>
+                <p>Suppose that <m>U</m> and <m>V</m> are subspaces of the vector space <m>W</m>.  Then their intersection, <m>U\cap V</m>, is a subspace of <m>W</m>.</p>
+            </statement>
+            <proof>
+                <p>We appeal to the three-part tests of <xref ref="theorem-TSS"/>.  First, since <m>U</m> and <m>V</m> are subspaces of <m>W</m>, they each contain the zero vector of <m>W</m>, and so by <xref ref="definition-SI"/>, <m>U\cap V</m> also contains the zero vector of <m>W</m>.</p>
+                <p>Second, choose <m>\vect{x},\,\vect{y}\in U\cap V</m>.  Since <m>\vect{x},\,\vect{y}\in U</m>, <xref ref="property-AC"/> says that <m>\vect{x}+\vect{y}\in U</m>.  Similarly, since <m>\vect{x},\,\vect{y}\in V</m>, <xref ref="property-AC"/> says that <m>\vect{x}+\vect{y}\in V</m>.  And therefore, by <xref ref="definition-SI"/>, <m>\vect{x}+\vect{y}\in U\cap V</m>, providing additive closure.</p>
+                <p>Third, choose <m>\alpha\in\complexes</m>, <m>\vect{x}\in U\cap V</m>.  Since <m>\vect{x}\in U</m>, <xref ref="property-SC"/> says that <m>\alpha\vect{x}\in U</m>.  Similarly, since <m>\vect{x}\in V</m>, <xref ref="property-SC"/> says that <m>\alpha\vect{x}\in V</m>.  And therefore, by <xref ref="definition-SI"/>, <m>\alpha\vect{x}\in U\cap V</m>, providing scalar closure.</p>
+            </proof>
+        </theorem>
+        <p>Take note of the <em>generality</em> of <xref ref="theorem-SIIS"/>.  We have made no assumptions about the <em>specific</em> operations used for the vector space <m>W</m>, nor have we assumed any <em>specifics</em> about the subspaces <m>U</m> and <m>V</m>.  So the result <em>applies</em> to a wide variety of <em>general</em> situations.</p>
         <computation xml:id="sage-VS" acro="VS">
             <title>Vector Spaces</title>
             <idx>vector spaces</idx>
